--- a/src/components/Product/ProductCard.css
+++ b/src/components/Product/ProductCard.css
@@ -1,7 +1,8 @@
 .product{
     display: flex;
-    width: 180px;
-    height: 220px;
+    width: 210px;
+    height: 250px;
+    padding-top: 0px;
     justify-content: space-between;
     flex-direction: column;
     align-items: center;
@@ -12,8 +13,9 @@
 }
 
 .product .s1{
-    height: 65%;
+    height: 67%;
     width: 100%;
+    margin-top: 0px;
     overflow: hidden;
 }
 
@@ -39,8 +41,7 @@
     margin: 6px;
     flex-direction: column;
     width: 100%;
-    align-items: center;
-    justify-content: center;
+    padding: 4px;
 }
 
 .product h3{
@@ -60,9 +61,10 @@
 .product .s3{
     height:15%;
     display: flex;
-    justify-content: center;
+    justify-content: left;
     align-items: center;
     width: 100%;
+    padding-top: 7px;
     padding:  5px 0px;
 }
 
@@ -98,4 +100,51 @@
     color: beige;
     transform: scale(1.2);
     cursor: pointer;
+}
+
+.product .addbtn .qty{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    width: 100%;
+    height: 100%;
+    background-color: white;
+    border-radius: 8px;
+    box-shadow:  0px 0px 10px 0px rgba(0,0,0,0.2);
+}
+
+.product .addbtn .qty button{
+    width: 30px;
+    height: 34px;
+    border: none;
+    border-radius: 5px;
+    background-color: chartreuse;
+    color: aliceblue;
+    font-size: 20px;
+    font-weight: 500;
+    border-bottom: 5px;
+    transition: all 0.5s ease-in-out;
+}
+
+.product .addbtn .qty p{
+    width: 15px;
+    justify-content: center;
+    font-size: 17px;
+    font-weight: 500;
+    color: var(--col1);
+    margin: 0px;
+    padding: 0px;
+}
+
+.product .addtocart{
+    width: 100%;
+    height: 34px;
+    border: none;
+    padding: 5px;
+    color: aliceblue;
+    font-size: 15px;
+    background-color: chartreuse;
+    border-radius: 8px;
 }
